--- a/code-solo.html
+++ b/code-solo.html
@@ -12,6 +12,12 @@
            /* 4. Choose one more html element to change on your page. Change it however you want. */
 
            /* 5. Spicy Task: see if you can align the h1 header to the center of the page. */
+.image {width: 250px;}
+h1 {color:rgb(17, 0, 255) }
+p { color:blue}
+li {color:blue}
+h2 { color:blue}
+body { background-color: black;}
 
         </style>
     </head>
@@ -21,7 +27,6 @@
             <a href="code-along.html">Code Along</a>
             <a href="code-solo.html">Code Solo</a>
         </div>
-
         <div class="container">
             <h1>Welcome to the World of Popcorn!</h1>
             <img class="image" src="https://nomoneynotime.com.au/uploads/recipes/Quick-Easy-popcorn.jpg" alt="A bowl of popcorn">
