--- a/code-along.html
+++ b/code-along.html
@@ -9,12 +9,15 @@
             /* 1. Select the class name `header` and change: the font color to white and background color to black. */
 
             /* 2. Select the class name `section-title` and change: the font size to 25px and the color to the hex code #081d8d */
-
-            .content {
+.header {color:rgb(255, 255, 255) }
+            .content { 
                 margin: 15px;
                 padding: 15px;
                 background-color: #f1f1f1;
             }
+            .section-title {font size:40px;
+            color: #081d8d }
+
         </style>
     </head>
 
